--- a/index history/10randqs.html
+++ b/index history/10randqs.html
@@ -19,12 +19,12 @@
         }
     </style>
 
-    <script src='js/commontools.js'></script>
+    <script src='index history/commontools.js'></script>
 
 </head>
 
 <body>
-    <script src='js/10randqs.js'></script>
+    <script src='index history/10randqs.js'></script>
 </body>
 
 </html>
